--- a/PersonelMVCUI/Views/Departman/DepartmanForm.cshtml
+++ b/PersonelMVCUI/Views/Departman/DepartmanForm.cshtml
@@ -14,14 +14,22 @@
 
 @using (Html.BeginForm("Kaydet", "Departman", FormMethod.Post))
 {
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Ad)
         @Html.TextBoxFor(m => m.Ad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Ad)
     </div>
-    @Html.HiddenFor(m=>m.Id)
+    @Html.HiddenFor(m => m.Id)
     <button type="submit" class="btn btn-success">Kaydet</button>
 
 
 }
 
+
+@section scripts{
+
+    <script src="~/Scripts/jquery.validate.min.js"></script>        <!--Validation işlemleri client tarafından kontrol edilmesi için yazılır -->>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
 
