--- a/PersonelMVCUI/Views/Personel/PersonelForm.cshtml
+++ b/PersonelMVCUI/Views/Personel/PersonelForm.cshtml
@@ -5,32 +5,58 @@
 }
 
 <h2>PersonelForm</h2>
+@Html.ValidationSummary
 @using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Personels.Ad)
         @Html.TextBoxFor(m => m.Personels.Ad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personels.Ad)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Personels.Soyad)
         @Html.TextBoxFor(m => m.Personels.Soyad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personels.Soyad)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Personels.DepartmanId)
-        @Html.DropDownListFor(m => m.Personels.DepartmanId,new SelectList(Model.Departmans,"Id","Ad"), new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.Personels.DepartmanId, new SelectList(Model.Departmans, "Id", "Ad"), "Departman Seçiniz", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personels.DepartmanId)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Personels.Maas)
         @Html.TextBoxFor(m => m.Personels.Maas, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personels.Maas)
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Personels.DogumTarihi)
-        @Html.TextBoxFor(m => m.Personels.DogumTarihi, new { @class = "form-control" })
+
+
+    <div class="radio">
+        <label>
+            @Html.RadioButtonFor(m => m.Personels.Cinsiyet, true) Erkek
+        </label>
+        <label>
+            @Html.RadioButtonFor(m => m.Personels.Cinsiyet, false) Kadın
+        </label>
+        @Html.ValidationMessageFor(m => m.Personels.Cinsiyet)
     </div>
 
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.Personels.EvliMi) Evliyseniz Seçiniz
+        </label>
+    </div>
+    @Html.HiddenFor(m => m.Personels.Id)
+    <button type="submit" class="=btn btn-default">Kaydet</button>
+
+}
+
+@section scripts{
+
+    <script src="~/Scripts/jquery.validate.min.js"></script>        <!--Validation işlemleri client tarafından kontrol edilmesi için yazılır -->>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 }
 
