--- a/PersonelMVCUI/Views/Shared/_Layout.cshtml
+++ b/PersonelMVCUI/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <title>_Layout</title>
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/site.css" rel="stylesheet" />
 </head>
 <body>
     @Html.Partial("_Navbar")
@@ -18,8 +19,9 @@
         @RenderBody()
     </div>
     <script src="~/Scripts/jquery-3.0.0.min.js"></script>
-    
+    <script src="~/Scripts/custom.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-
+    <script src="~/Scripts/bootbox.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
